# strata

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  linux.yml  macos.yml  (+1 more)
benchmark/: main.cpp
demo/: CMakeLists.txt  main.cpp
docs/: architecture.md  c_api.md  guide.md  hive.md  performance.md  plugin_design.md  plugins.md
ltk/: CMakeLists.txt  common.h
strata/: CMakeLists.txt
strata/api/: any.h  function.h  property.h  strata.h
strata/ext/: any.h  event.h  meta_object.h  object.h
strata/include/: array_view.h  common.h  uid.h
strata/include/api/: any.h  callback.h  function.h  function_context.h  future.h  property.h  strata.h
strata/include/ext/: any.h  core_object.h  event.h  interface_dispatch.h  metadata.h  object.h  refcounted_dispatch.h
strata/include/interface/: intf_any.h  intf_event.h  intf_external_any.h  intf_function.h  intf_future.h  intf_interface.h  intf_metadata.h  intf_object.h  intf_object_factory.h  intf_property.h  intf_strata.h  refcnt_ptr.h  types.h
strata/interface/: intf_metadata.h  intf_registry.h
strata/src/: event.cpp  event.h  function.cpp  function.h  future.cpp  future.h  metadata_container.cpp  metadata_container.h  plugin.cpp  property.cpp  property.h  registry.cpp  registry.h  strata.cpp  strata_impl.cpp  strata_impl.h
test/: CMakeLists.txt  main.cpp  test_animation.cpp  test_any.cpp  test_c_api.cpp  test_function.cpp  test_future.cpp  test_hierarchy.cpp  test_hive.cpp  test_object.cpp  test_plugin.cpp  test_property.cpp  test_string.cpp  test_uid.cpp  test_vector.cpp
velk/: CMakeLists.txt
(+100 files in other folders)
